--- a/static/bower.json
+++ b/static/bower.json
@@ -11,5 +11,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "~3.3.1",
+    "pure": "~0.5.0",
+    "font-awesome": "~4.2.0",
+    "jquery": "~2.1.3"
+  }
 }
